--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -100,6 +100,7 @@ commands:
         default: "1.15.7"
     steps:
       - run: |
+          sudo rm -rf /usr/local/go
           GO_VERSION=<< parameters.go-version >>
           wget "https://golang.org/dl/go$GO_VERSION.linux-amd64.tar.gz" -O ./go.tar
           tar -C /usr/local -xzf go.tar
