[circleci] Add tag of latest to orc8r dockers
Signed-off-by: Ayelet Regev Dabah <ayelet.regev@gmail.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -544,6 +544,10 @@ jobs:
       - tag-push-docker:
           project: orc8r
           images: "nginx|controller"
+      - tag-push-docker:
+          project: orc8r
+          images: "nginx|controller"
+          tag-latest: true
       - persist-githash-version:
           file_prefix: orc8r
       - notify-magma:
