--- a/orc8r/cloud/Makefile
+++ b/orc8r/cloud/Makefile
@@ -21,18 +21,19 @@ MAGMA_MODULES := \
 $(warning MAGMA_MODULES is undefined, using default: $(MAGMA_MODULES))
 endif
 
-SPECS_DIR := $(MAGMA_ROOT)/orc8r/cloud/configs/specs
-COMMON_DIR := common
 SWAGGER_ROOT := $(MAGMA_ROOT)/orc8r/cloud/docker/controller/apidocs
 SWAGGER_COMMON := swagger-common.yml
 SWAGGER_V1_ROOT := $(SWAGGER_ROOT)/v1
 SWAGGER_V1_YML := $(SWAGGER_ROOT)/v1/swagger.yml
 SWAGGER_V1_CONFIG := $(SWAGGER_ROOT)/v1/goswagger-config.yml
-export SPECS_DIR
+SWAGGER_V1_SPECS_DIR := $(MAGMA_ROOT)/orc8r/cloud/configs/specs
+SWAGGER_V1_COMMON_DIR := common
+
 export SWAGGER_ROOT
 export SWAGGER_COMMON
 export SWAGGER_V1_ROOT
 export SWAGGER_V1_CONFIG
+export SWAGGER_V1_SPECS_DIR
 
 #############
 ## Modules ##
@@ -126,14 +127,13 @@ lint_tools:
 ######################
 
 swagger: tools swagger_directories $(SWAGGER_LIST)
-	cp $(MAGMA_ROOT)/orc8r/cloud/go/models/swagger-common.yml $(SPECS_DIR)/$(COMMON_DIR)/$(SWAGGER_COMMON)
-	combine_swagger --in=$(SPECS_DIR) --common=$(SPECS_DIR)/$(COMMON_DIR)/$(SWAGGER_COMMON) --out=$(SWAGGER_V1_YML)
+	cp $(MAGMA_ROOT)/orc8r/cloud/go/models/swagger-common.yml $(SWAGGER_V1_SPECS_DIR)/$(SWAGGER_V1_COMMON_DIR)/$(SWAGGER_COMMON)
+	combine_swagger --in=$(SWAGGER_V1_SPECS_DIR) --common=$(SWAGGER_V1_SPECS_DIR)/$(SWAGGER_V1_COMMON_DIR)/$(SWAGGER_COMMON) --out=$(SWAGGER_V1_YML)
 	swagger validate $(SWAGGER_V1_YML)
 
 swagger_directories:
-	rm -rf $(SPECS_DIR)
-	mkdir $(SPECS_DIR)
-	mkdir $(SPECS_DIR)/$(COMMON_DIR)
+	rm -rf $(SWAGGER_V1_SPECS_DIR)
+	mkdir -p $(SWAGGER_V1_SPECS_DIR)/$(SWAGGER_V1_COMMON_DIR)
 
 $(SWAGGER_LIST): %_swagger:
 	make -C $*/cloud/go copy_swagger_files
