--- a/.gitignore
+++ b/.gitignore
@@ -48,7 +48,7 @@ orc8r/cloud/test_certs/*.pem
 orc8r/cloud/test_certs/*.srl
 orc8r/cloud/test_certs/*.pfx
 
-# Ignore generated swagger files
+# Ignore generated Swagger files
 orc8r/cloud/configs/specs
 
 # Ignore apt/build cache
