--- a/lte/cloud/helm/lte-orc8r/values.yaml
+++ b/lte/cloud/helm/lte-orc8r/values.yaml
@@ -84,7 +84,7 @@ lte:
       orc8r.io/obsidian_handlers: "true"
       orc8r.io/state_indexer: "true"
       orc8r.io/stream_provider: "true"
-      orc8r.io/spec_servicer: "true"
+      orc8r.io/swagger_spec: "true"
     annotations:
       orc8r.io/state_indexer_types: "single_enodeb"
       orc8r.io/state_indexer_version: "1"
@@ -108,7 +108,7 @@ policydb:
   service:
     labels:
       orc8r.io/obsidian_handlers: "true"
-      orc8r.io/spec_servicer: "true"
+      orc8r.io/swagger_spec: "true"
     annotations:
       orc8r.io/obsidian_handlers_path_prefixes: >
         /magma/v1/lte/:network_id/policy_qos_profiles,
@@ -120,7 +120,7 @@ subscriberdb:
     labels:
       orc8r.io/obsidian_handlers: "true"
       orc8r.io/state_indexer: "true"
-      orc8r.io/spec_servicer: "true"
+      orc8r.io/swagger_spec: "true"
     annotations:
       orc8r.io/state_indexer_types: "mobilityd_ipdesc_record"
       orc8r.io/state_indexer_version: "1"
@@ -133,6 +133,6 @@ smsd:
   service:
     labels:
       orc8r.io/obsidian_handlers: "true"
-      orc8r.io/spec_servicer: "true"
+      orc8r.io/swagger_spec: "true"
     annotations:
       orc8r.io/obsidian_handlers_path_prefixes: "/magma/v1/lte/:network_id/sms"
