--- a/wifi/cloud/helm/wifi-orc8r/values.yaml
+++ b/wifi/cloud/helm/wifi-orc8r/values.yaml
@@ -81,6 +81,6 @@ wifi:
     labels:
       orc8r.io/mconfig_builder: "true"
       orc8r.io/obsidian_handlers: "true"
-      orc8r.io/spec_servicer: "true"
+      orc8r.io/swagger_spec: "true"
     annotations:
       orc8r.io/obsidian_handlers_path_prefixes: "/magma/v1/wifi"
