Mitigate grpc timeouts
Signed-off-by: Ulas Kozat <kozat@fb.com>

--- a/lte/gateway/configs/subscriberdb.yml
+++ b/lte/gateway/configs/subscriberdb.yml
@@ -43,3 +43,6 @@ relay_retry_count: 0
 # shall set to false if intend to use Free-Diameter for s6a interface
 # TODO replace boolean with list of protocols: "s6a_over_grpc", "s6a_over_fd"
 s6a_over_grpc: True
+
+# Number of grpc workers
+grpc_workers: 1
