--- a/orc8r/cloud/helm/orc8r/values.yaml
+++ b/orc8r/cloud/helm/orc8r/values.yaml
@@ -215,6 +215,7 @@ ctraced:
   service:
     labels:
       orc8r.io/obsidian_handlers: "true"
+      orc8r.io/swagger_spec: "true"
     annotations:
       orc8r.io/obsidian_handlers_path_prefixes: >
         /magma/v1/networks/:network_id/tracing,
@@ -238,6 +239,7 @@ metricsd:
   service:
     labels:
       orc8r.io/obsidian_handlers: "true"
+      orc8r.io/swagger_spec: "true"
     annotations:
       orc8r.io/obsidian_handlers_path_prefixes: >
         /magma/v1/networks/:network_id/alerts,
@@ -260,6 +262,7 @@ orchestrator:
       orc8r.io/obsidian_handlers: "true"
       orc8r.io/state_indexer: "true"
       orc8r.io/stream_provider: "true"
+      orc8r.io/swagger_spec: "true"
     annotations:
       orc8r.io/state_indexer_types: "directory_record"
       orc8r.io/state_indexer_version: "1"
@@ -290,6 +293,7 @@ tenants:
   service:
     labels:
       orc8r.io/obsidian_handlers: "true"
+      orc8r.io/swagger_spec: "true"
     annotations:
       orc8r.io/obsidian_handlers_path_prefixes: >
         /magma/v1/tenants,
