--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1037,115 +1037,114 @@ jobs:
 workflows:
   version: 2
 
-  cloud:
-    jobs:
-      - insync-checkin
-      - cloud_lint
-      - cloud-test
-      - orc8r-build:
-          requires:
-            - insync-checkin
-            - cloud_lint
-            - cloud-test
-
-  lib_gateway:
-    jobs:
-      - orc8r-gateway-test
+  # cloud:
+  #   jobs:
+  #     - insync-checkin
+  #     - cloud_lint
+  #     - cloud-test
+  #     - orc8r-build:
+  #         requires:
+  #           - insync-checkin
+  #           - cloud_lint
+  #           - cloud-test
+  #
+  # lib_gateway:
+  #   jobs:
+  #     - orc8r-gateway-test
 
   agw:
     jobs:
       - lte-test
-      - lte-integ-test:
-          <<: *master_and_develop
+      - lte-integ-test
       - lte-agw-deploy:
           <<: *only_master
           requires:
             - lte-integ-test
 
-  feg:
-    jobs:
-      - feg-precommit
-      - feg-build:
-          requires:
-            - feg-precommit
+  # feg:
+  #   jobs:
+  #     - feg-precommit
+  #     - feg-build:
+  #         requires:
+  #           - feg-precommit
+  #
+  # cwag:
+  #   jobs:
+  #     - cwag-precommit
+  #     - cwf-integ-test:
+  #         <<: *master_and_develop
+  #     - xwfm-test:
+  #         <<: *master_and_develop
+  #     - cwag-deploy:
+  #         <<: *only_master
+  #         requires:
+  #           - cwag-precommit
+  #           - cwf-integ-test
+  #     - xwfm-deploy:
+  #         <<: *only_master
+  #         requires:
+  #           - xwfm-test
+  #           - cwag-deploy
+  #     - cwag-deploy:
+  #         <<: *only_master
+  #         name: cwag-deploy-latest
+  #         requires:
+  #           - xwfm-test
+  #           - cwag-precommit
+  #           - cwf-integ-test
+  #         images: 'gateway_python|gateway_pipelined|gateway_go'
+  #         tag: 'latest'
+  #     - xwfm-deploy:
+  #         <<: *only_master
+  #         name: xwfm-deploy-latest
+  #         requires:
+  #           - xwfm-test
+  #           - cwag-precommit
+  #           - cwf-integ-test
+  #         tag: 'latest'
 
-  cwag:
-    jobs:
-      - cwag-precommit
-      - cwf-integ-test:
-          <<: *master_and_develop
-      - xwfm-test:
-          <<: *master_and_develop
-      - cwag-deploy:
-          <<: *only_master
-          requires:
-            - cwag-precommit
-            - cwf-integ-test
-      - xwfm-deploy:
-          <<: *only_master
-          requires:
-            - xwfm-test
-            - cwag-deploy
-      - cwag-deploy:
-          <<: *only_master
-          name: cwag-deploy-latest
-          requires:
-            - xwfm-test
-            - cwag-precommit
-            - cwf-integ-test
-          images: 'gateway_python|gateway_pipelined|gateway_go'
-          tag: 'latest'
-      - xwfm-deploy:
-          <<: *only_master
-          name: xwfm-deploy-latest
-          requires:
-            - xwfm-test
-            - cwag-precommit
-            - cwf-integ-test
-          tag: 'latest'
 
+  # cwf_operator:
+  #   jobs:
+  #     - cwf-operator-precommit
+  #     - cwf-operator-build:
+  #         requires:
+  #           - cwf-operator-precommit
 
-  cwf_operator:
-    jobs:
-      - cwf-operator-precommit
-      - cwf-operator-build:
-          requires:
-            - cwf-operator-precommit
+  # hourly_xwfm:
+  #   triggers:
+  #     - schedule:
+  #         cron: "0 * * * *"
+  #         <<: *only_master
+  #   jobs:
+  #     - xwfm-test:
+  #         notify_magma_ci: false
+  #
+  # nms:
+  #   jobs:
+  #     - nms-flow-test
+  #     - eslint
+  #     - nms-yarn-test:
+  #         requires:
+  #           - nms-flow-test
+  #     - nms-e2e-test:
+  #         requires:
+  #           - nms-flow-test
+  #           - eslint
+  #           - nms-yarn-test
+  #     - nms-build:
+  #         requires:
+  #           - nms-flow-test
+  #           - eslint
+  #           - nms-yarn-test
+  #           - nms-e2e-test
 
-  hourly_xwfm:
-    triggers:
-      - schedule:
-          cron: "0 * * * *"
-          <<: *only_master
-    jobs:
-      - xwfm-test:
-          notify_magma_ci: false
-
-  nms:
-    jobs:
-      - nms-flow-test
-      - eslint
-      - nms-yarn-test:
-          requires:
-            - nms-flow-test
-      - nms-e2e-test:
-          requires:
-            - nms-flow-test
-            - eslint
-            - nms-yarn-test
-      - nms-build:
-          requires:
-            - nms-flow-test
-            - eslint
-            - nms-yarn-test
-            - nms-e2e-test
-
-  docusaurus:
-   jobs:
-    - docusaurus_build_and_deploy:
-        <<: *only_master
-
-  fossa:
-    jobs:
-      - fossa-analyze:
-          <<: *only_master
+  # docusaurus:
+  #  jobs:
+  #   - docusaurus_build_and_deploy:
+  #       <<: *only_master
+  #
+  # fossa:
+  #   jobs:
+  #     - fossa-analyze:
+  #         <<: *only_master
