[lte][agw] update agw_install.sh and related files to allow bare metal install on ubuntu focal
Signed-off-by: Ken Kahrs <kkahrs@gmail.com>

--- a/lte/gateway/deploy/ovs_deploy.yml
+++ b/lte/gateway/deploy/ovs_deploy.yml
@@ -11,6 +11,8 @@
 # limitations under the License.
 
 - name: Deploy ovs and magma
+  become: yes
   hosts: ovs_deploy
   roles:
+    - role: envoy
     - role: ovs_deploy
