[orc8r][LI] Implement LI events collection for X2 interface
Signed-off-by: YOUSSEF EL MASMOUDI <ymasmoudi@fb.com>

--- a/orc8r/cloud/configs/service_registry.yml
+++ b/orc8r/cloud/configs/service_registry.yml
@@ -146,3 +146,8 @@ services:
     host: "localhost"
     port: 9180
     proxy_type: "clientcert"
+
+  interceptd:
+    host: "localhost"
+    port: 9666
+    proxy_type: "internal"
