--- a/orc8r/cloud/docker/controller/supervisord.conf
+++ b/orc8r/cloud/docker/controller/supervisord.conf
@@ -261,3 +261,11 @@ stdout_logfile=NONE
 stderr_logfile=NONE
 stdout_events_enabled=true
 stderr_events_enabled=true
+
+[program:interceptd]
+command=/usr/bin/envdir /var/opt/magma/envdir /var/opt/magma/bin/interceptd -logtostderr=true -v=0
+autorestart=false
+stdout_logfile=NONE
+stderr_logfile=NONE
+stdout_events_enabled=true
+stderr_events_enabled=true
