[MME][Ubuntu18] fixes for build oai-mme in RelWithDebInfo more
Signed-off-by: Raphael Defosseux <raphael.defosseux@openairinterface.org>

--- a/ci-scripts/docker/Dockerfile.mme.ci.ubuntu18
+++ b/ci-scripts/docker/Dockerfile.mme.ci.ubuntu18
@@ -5,7 +5,7 @@ FROM magma-dev-mme:ci-base-image as magma-mme-builder
 
 ARG FEATURES=mme_oai
 ENV MAGMA_ROOT=/magma
-ENV BUILD_TYPE=Debug
+ENV BUILD_TYPE=RelWithDebInfo
 ENV C_BUILD=/build/c
 ENV TZ=Europe/Paris
 ENV DEBIAN_FRONTEND=noninteractive
