Add LTE Integration Test in CircleCI for V1.4 commits
Signed-off-by: Marie Bremner <marwhal@fb.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1004,6 +1004,7 @@ workflows:
   agw:
     jobs:
       - lte-test
+      - lte-integ-test
       - agw-hold:
           type: approval
       - lte-agw-deploy:
