--- a/lte/gateway/configs/pipelined.yml
+++ b/lte/gateway/configs/pipelined.yml
@@ -22,7 +22,7 @@
 ## IMPORTANT ##
 ###############
 # Changes to this file has to be replicated in pipelined.yml_prod
-
+log_level: DEBUG
 # Differentiate between the setup type(CWF or LTE)
 setup_type: LTE
 
@@ -67,7 +67,7 @@ meter:
   idle_timeout: 0
 
 enforcement:
-  poll_interval: 10
+  poll_interval: 2
   default_drop_flow_name: 'internal_default_drop_flow_rule'
 
 # Enable polling mobilityd to identify which subscriber sessions need to be
