--- a/lte/gateway/configs/sessiond.yml
+++ b/lte/gateway/configs/sessiond.yml
@@ -11,7 +11,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-log_level: INFO
+log_level: DEBUG
 rule_update_inteval_sec: 1
 
 # Session manager will report the usage when the usage is greater than
