Fix integration tests with pip upgrade
Signed-off-by: Marie Bremner <marwhal@fb.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,6 +46,9 @@ orbs:
           - run:
               name: Set Python version
               command: pyenv global <<parameters.python_version>>
+          - run:
+              name: Upgrade Pip
+              command: pip install --upgrade pip
 
   docker:
     commands:
