[lte][agw][infra][pkgrepo] automate third party deps build
Signed-off-by: Ken Kahrs <kkahrs@gmail.com>

--- a/lte/gateway/deploy/magma_prod.yml
+++ b/lte/gateway/deploy/magma_prod.yml
@@ -17,9 +17,10 @@
   become: yes
 
   vars:
-    preburn: false
+    preburn: true
     full_provision: true
 
   roles:
     - role: stretch_snapshot
     - role: uselocalpkgrepo
+    - role: envoy
