Run prod version of NMS instead of dev when deployed in kube
Signed-off-by: Karthik Subraveti <ksubraveti@fb.com>

--- a/orc8r/cloud/helm/orc8r/charts/nms/templates/magmalte-deployment.yaml
+++ b/orc8r/cloud/helm/orc8r/charts/nms/templates/magmalte-deployment.yaml
@@ -62,7 +62,7 @@ spec:
           args:
             - yarn
             - run
-            - start:dev
+            - start:prod
           env:
             - name: API_CERT_FILENAME
               value: /run/secrets/admin_operator.pem
