--- a/orc8r/cloud/helm/orc8r/charts/secrets/templates/configs-orc8r.secret.yaml
+++ b/orc8r/cloud/helm/orc8r/charts/secrets/templates/configs-orc8r.secret.yaml
@@ -23,12 +23,20 @@ data:
 {{- if .Values.secret.configs.enabled }}
 # Template the defaults (metrics, orchestrator) first, will be overridden if
 # passed in through values file
+{{- if .Values.victoriametrics_enabled }}
+  {{ $orchestratorTemplate := include "orchestrator-victoriametrics-config-template" .}}
+  orchestrator.yml: {{ $orchestratorTemplate | b64enc | quote }}
+{{- else}}
 {{ $orchestratorTemplate := include "orchestrator-config-template" .}}
   orchestrator.yml: {{ $orchestratorTemplate | b64enc | quote }}
+{{- end}}
 {{- if .Values.thanos_enabled }}
 {{ $metricsdTemplate := include "metricsd-thanos-config-template" .}}
   metricsd.yml: {{ $metricsdTemplate | b64enc | quote }}
-{{- else}}
+{{- else if .Values.victoriametrics_enabled }}
+{{ $metricsdTemplate := include "metricsd-victoriametrics-config-template" .}}
+  metricsd.yml: {{ $metricsdTemplate | b64enc | quote }}
+{{- else }}
 {{ $metricsdTemplate := include "metricsd-config-template" .}}
   metricsd.yml: {{ $metricsdTemplate | b64enc | quote }}
 {{- end}}
