--- a/orc8r/cloud/helm/orc8r/charts/secrets/values.yaml
+++ b/orc8r/cloud/helm/orc8r/charts/secrets/values.yaml
@@ -12,6 +12,9 @@
 # Create orchestrator secrets.
 create: true
 
+victoriametrics_enabled: false
+thanos_enabled: false
+
 # orc8r secret configuration
 secret:
   certs:
