--- a/orc8r/cloud/helm/orc8r/values.yaml
+++ b/orc8r/cloud/helm/orc8r/values.yaml
@@ -40,6 +40,8 @@ metrics:
     create: false
   thanos:
     enabled: false
+  victoriametrics:
+    enabled: false
 
 # secrets sub-chart configuration.
 secrets:
