[lte][agw] add force-overwrite to apt options when installing magma in ovs_deploy ansible role
Signed-off-by: Ken Kahrs <kkahrs@gmail.com>

--- a/lte/gateway/deploy/roles/ovs_deploy/tasks/main.yml
+++ b/lte/gateway/deploy/roles/ovs_deploy/tasks/main.yml
@@ -127,6 +127,7 @@
   become: yes
   apt:
     name: "{{ packages }}"
+    dpkg_options: 'force-confold,force-confdef,force-overwrite'
   vars:
     packages:
       - magma
