--- a/lte/gateway/configs/envoy_controller.yml
+++ b/lte/gateway/configs/envoy_controller.yml
@@ -1,5 +1,4 @@
 ---
-#
 # Copyright 2020 The Magma Authors.
 
 # This source code is licensed under the BSD-style license found in the
@@ -13,14 +12,5 @@
 
 log_level: INFO
 
-# Interface for internal packet sending
-interface_name: li_port
-
-# Used for generated internal packets
-pkt_dst_mac: "11:99:99:bb:aa:a3"
-pkt_src_mac: "99:11:44:31:ff:ff"
-
-proxy_addr: "127.0.0.1"
-proxy_port: 5555
-cert_file : "/tmp/example.crt"
-key_file: "/tmp/example.key"
+# Management port value from lte/gateway/deploy/roles/magma/files/envoy.yaml
+mgmt_port: 9000
