--- a/lte/gateway/c/oai/test/openflow/CMakeLists.txt
+++ b/lte/gateway/c/oai/test/openflow/CMakeLists.txt
@@ -3,6 +3,7 @@ add_compile_options(-std=c++11)
 set(OUTPUT_DIR "${CMAKE_CURRENT_BINARY_DIR}")
 
 include_directories("${PROJECT_SOURCE_DIR}/openflow/controller")
+link_directories(/usr/src/googletest/googlemock/lib/)
 add_executable(openflow_controller_test test_openflow_controller.cpp)
 add_executable(imsi_encoder_test test_imsi_encoder.cpp)
 add_executable(gtp_app_test test_gtp_app.cpp)
@@ -12,7 +13,7 @@ target_link_libraries(OPENFLOW_TEST
     COMMON
     lfds710
     LIB_OPENFLOW_CONTROLLER  LIB_BSTR LIB_HASHTABLE LIB_ITTI LIB_S1AP TASK_S1AP
-    gmock_main pthread rt)
+    gmock_main gtest gtest_main gmock pthread rt)
 
 set_target_properties(OPENFLOW_TEST PROPERTIES LINKER_LANGUAGE CXX)
 
