--- a/lte/gateway/deploy/roles/magma/files/systemd/magma_dp_envoy.service
+++ b/lte/gateway/deploy/roles/magma/files/systemd/magma_dp_envoy.service
@@ -16,6 +16,8 @@ After=magma@envoy_controller.service
 [Service]
 Type=simple
 EnvironmentFile=/etc/environment
+# Add delay to let envoy-controller init
+ExecStartPre=/bin/sleep 40
 ExecStart=/sbin/ip netns exec envoy_ns1 /usr/bin/envoy --bootstrap-version 2 -c /var/opt/magma/envoy.yaml --log-path /var/log/envoy.log -l debug
 MemoryAccounting=yes
 StandardOutput=syslog
