--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -11,7 +11,7 @@ orc8r/tools/packer/ @tmdzk @mattymo @119Vik
 orc8r/cloud/deploy/bare-metal/ @tmdzk @mattymo @119Vik
 
 feg/ @themarwhal @mpgermano @uri200 @emakeev
-cwf/ @themarwhal @mpgermano @uri200 @emakeev
+cwf/ @magma/cwf-approvers
 cwf/gateway/Vagrantfile @mattymo @119Vik @tmdzk
 
 
@@ -38,4 +38,5 @@ feg/radius @AyliD @aharonnovo @r-i-g @themarwhal @mpgermano @uri200 @emakeev
 
 nms/ @karthiksubraveti @andreilee @Scott8440
 
-CODEOWNERS @amarpad
+# less notification
+#CODEOWNERS @amarpad
