Upload LteTest results to CircleCI
Signed-off-by: Marie Bremner <marwhal@fb.com>

--- a/lte/gateway/deploy/roles/dev_common/tasks/main.yml
+++ b/lte/gateway/deploy/roles/dev_common/tasks/main.yml
@@ -308,3 +308,8 @@
   become: yes
   command: "update-alternatives --install /usr/bin/clang-format clang-format /usr/bin/clang-format-7 1000"
   when: preburn
+
+- file:
+    path: /var/tmp/test_results
+    state: directory
+    mode: 0777
