--- a/lte/gateway/c/oai/common/glogwrapper/CMakeLists.txt
+++ b/lte/gateway/c/oai/common/glogwrapper/CMakeLists.txt
@@ -1,6 +1,20 @@
-cmake_minimum_required(VERSION 3.7)
+# Copyright 2020 The Magma Authors.
+
+# This source code is licensed under the BSD-style license found in the
+# LICENSE file in the root directory of this source tree.
+
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+
+cmake_minimum_required(VERSION 3.7.2)
+
 project(glogwrapper)
 
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_EXTENSIONS OFF)
 set(CMAKE_CXX_STANDARD 14)
 
 add_library(glogwrapper glog_logging.cpp glog_logging.h)
