Review comments for PR #4718
- Arun Thulasi, arunt@fb.com

Signed-off-by: Arun Thulasi <arunt@fb.com>

--- a/experimental/cloudstrapper/playbooks/roles/vars/cluster.yaml
+++ b/experimental/cloudstrapper/playbooks/roles/vars/cluster.yaml
@@ -9,6 +9,7 @@ orc8rDomainName: arun.fbmagma.ninja
 orc8rLabel: 1.3.0
 orc8rVersion: v1.3
 gitHelmRepo: helm13
+#Ex: If the repo is avaialble from https://github.com/<username>/helm13.git, use the repo name for gitHelmRepo
 
 #AWS variables
 awsBootKey: "{{ keyBoot }}"
