--- a/orc8r/cloud/helm/orc8r/charts/nms/Chart.yaml
+++ b/orc8r/cloud/helm/orc8r/charts/nms/Chart.yaml
@@ -12,8 +12,8 @@
 apiVersion: v1
 description: Magma NMS
 name: nms
-version: 0.1.7
-home: https://github.com/facebookincubator/magma
+version: 0.1.8
+home: https://github.com/magma/magma
 sources:
   - https://github.com/facebookincubator/magma
 keywords:
