AGW: pipelined: qos: fix recovery of APN AMBR config
Rather than using TC as only source of APN AMBR, use Redis
to store the qid->APN-qid and APN_leaf->APN info.
This avoid complicated recovery in stateless mode.
This PR also adds apn_ambr_enabled config to enable APN AMBR feature.

Signed-off-by: Pravin B Shelar <pbshelar@fb.com>

--- a/lte/gateway/configs/pipelined.yml
+++ b/lte/gateway/configs/pipelined.yml
@@ -116,6 +116,7 @@ qos:
  ovs_meter:
   min_idx: 2
   max_idx: 100000
+ apn_ambr_enabled: true
 
 monitored_ifaces: ['gtp_br0',
                    'gtp0',
