Convert eventd to k8 service
Signed-off-by: Andy Lee Khuu <andykhuu@stanford.edu>

--- a/orc8r/cloud/helm/orc8r/values.yaml
+++ b/orc8r/cloud/helm/orc8r/values.yaml
@@ -235,6 +235,12 @@ dispatcher:
     labels: {}
     annotations: {}
 
+eventd:
+  service:
+    labels:
+      orc8r.io/swagger_spec: "true"
+    annotations: {}
+
 metricsd:
   service:
     labels:
