--- a/orc8r/cloud/helm/orc8r/charts/logging/templates/fluentd-daemon.configmap.yaml
+++ b/orc8r/cloud/helm/orc8r/charts/logging/templates/fluentd-daemon.configmap.yaml
@@ -2,7 +2,7 @@ kind: ConfigMap
 apiVersion: v1
 metadata:
   name: {{ .Release.Name }}-fluentd-es-configs
-  namespace: kube-system
+  namespace: {{ .Release.Namespace }}
   labels:
     addonmanager.kubernetes.io/mode: Reconcile
 data:
