Wrap routing handler
Signed-off-by: Andy Lee Khuu <andykhuu@stanford.edu>

--- a/orc8r/cloud/configs/obsidian.yml
+++ b/orc8r/cloud/configs/obsidian.yml
@@ -10,6 +10,8 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-# When true, poll and merge Swagger specs at runtime
-# When false, do not poll or merge Swagger specs at runtime
-enable_runtime_specs : true
+# enable_dynamic_swagger_specs is a config in the obsidian
+# service config.
+# When true, poll and combine Swagger specs at runtime
+# When false, fall back to serving the static Swagger spec asset
+enable_dynamic_swagger_specs: true
