Corrected src to url for get_url
Signed-off-by: Ranjini Iyer <ranjiniiyer@fb.com>

--- a/orc8r/tools/ansible/roles/pkgrepo/tasks/debian.yml
+++ b/orc8r/tools/ansible/roles/pkgrepo/tasks/debian.yml
@@ -25,7 +25,7 @@
 - name: Add JFrog key
   block:
     - get_url:
-        src: https://facebookconnectivity.jfrog.io/artifactory/api/gpg/key/public
+        url: https://facebookconnectivity.jfrog.io/artifactory/api/gpg/key/public
         dest: /tmp/jfrog.pub
     - apt_key:
         data: "{{ lookup('file', '/tmp/jfrog.pub') }}"
