--- a/orc8r/tools/ansible/roles/pkgrepo/tasks/redhat.yml
+++ b/orc8r/tools/ansible/roles/pkgrepo/tasks/redhat.yml
@@ -20,7 +20,7 @@
 - name: Add JFrog key
   block:
     - get_url:
-        src: https://facebookconnectivity.jfrog.io/artifactory/api/gpg/key/public
+        url: https://facebookconnectivity.jfrog.io/artifactory/api/gpg/key/public
         dest: /tmp/jfrog.pub
     - rpm_key:
         key: /tmp/jfrog.pub
