File extensions modified
Signed-off-by: Arun Thulasi <arunt@fb.com>

--- a/experimental/cloudstrapper/playbooks/roles/build-platform/tasks/main.yaml
+++ b/experimental/cloudstrapper/playbooks/roles/build-platform/tasks/main.yaml
@@ -1,8 +1,8 @@
 ---
 
-- include: py-packages.yml
+- include: py-packages.yaml
   tags: py
-- include: build-tools-packages.yml
+- include: build-tools-packages.yaml
   tags: tools
 - include: magma-repo.yaml
   tags: setupMagma
