Ngap module initialization code
Signed-off-by: ashish-pr <ashish.p@altencalsoftlabs.com>

--- a/lte/gateway/c/oai/oai_mme/CMakeLists.txt
+++ b/lte/gateway/c/oai/oai_mme/CMakeLists.txt
@@ -41,9 +41,9 @@ add_executable(mme
 target_link_libraries(mme
     -Wl,--start-group
         COMMON
-        LIB_3GPP LIB_S1AP LIB_SECU LIB_DIRECTORYD LIB_SGS_CLIENT LIB_BSTR
+	LIB_3GPP LIB_S1AP LIB_NGAP LIB_SECU LIB_DIRECTORYD LIB_SGS_CLIENT LIB_BSTR
         LIB_HASHTABLE LIB_S6A_PROXY
-        TASK_S1AP TASK_SCTP_SERVER TASK_SGS TASK_SMS_ORC8R
+        TASK_S1AP TASK_NGAP TASK_SCTP_SERVER TASK_SGS TASK_SMS_ORC8R
         TASK_S6A TASK_MME_APP TASK_GRPC_SERVICE TASK_NAS TASK_HA
         ${ITTI_LIB} ${GCOV_LIB}
     -Wl,--end-group
