Adding code to validate imeisv received in smc
Signed-off-by: Pruthvi Hebbani <pruthvi.hebbani@radisys.com>

--- a/lte/gateway/configs/templates/mme.conf.template
+++ b/lte/gateway/configs/templates/mme.conf.template
@@ -92,6 +92,15 @@ MME :
          {% endfor %}
     );
 
+    CSFB :
+    {
+        NON_EPS_SERVICE_CONTROL = "{{ non_eps_service_control }}";
+        CSFB_MCC = "{{ csfb_mcc }}";
+        CSFB_MNC = "{{ csfb_mnc }}";
+        LAC = "{{ lac }}";
+    };
+
+
     # List of restricted PLMNs
     # By default this list is empty
     # Max number of restricted plmn is 10
@@ -109,17 +118,8 @@ MME :
         #{ IMEI="990004823510370"}
         # Sample IMEI with SVN i.e 16 digits
         { IMEI="9900048235103723"},
-        { IMEI="990004823510372"}
+        { IMEI="3805468432113171"}
     );
-
-    CSFB :
-    {
-        NON_EPS_SERVICE_CONTROL = "{{ non_eps_service_control }}";
-        CSFB_MCC = "{{ csfb_mcc }}";
-        CSFB_MNC = "{{ csfb_mnc }}";
-        LAC = "{{ lac }}";
-    };
-
 
     NAS :
     {
@@ -253,8 +253,8 @@ MME :
         SPGW_APP_LOG_LEVEL = "{{ oai_log_level }}";
         UDP_LOG_LEVEL      = "{{ oai_log_level }}";
         S1AP_LOG_LEVEL     = "{{ oai_log_level }}";
-        NAS_LOG_LEVEL      = "{{ oai_log_level }}";
-        MME_APP_LOG_LEVEL  = "{{ oai_log_level }}";
+        NAS_LOG_LEVEL      = "DEBUG";
+        MME_APP_LOG_LEVEL  = "DEBUG";
         GTPV2C_LOG_LEVEL   = "{{ oai_log_level }}";
         S11_LOG_LEVEL      = "{{ oai_log_level }}";
         S6A_LOG_LEVEL      = "{{ oai_log_level }}";
