[orc8r][NetworkProbe] Implement records encoding
Signed-off-by: YOUSSEF EL MASMOUDI <ymasmoudi@fb.com>

--- a/lte/cloud/configs/nprobe.yml
+++ b/lte/cloud/configs/nprobe.yml
@@ -20,3 +20,4 @@ exporterKeyFile: "/var/opt/magma/certs/client.key"
 exporterCrtFile: "/var/opt/magma/certs/client.crt"
 skipVerifyServer: True
 
+operatorID: 9999
