Automation of adding blocked imei in mme.conf.template
Signed-off-by: Pruthvi Hebbani <pruthvi.hebbani@radisys.com>

--- a/lte/gateway/configs/templates/mme.conf.template
+++ b/lte/gateway/configs/templates/mme.conf.template
@@ -114,11 +114,12 @@ MME :
     # Max number of blocked IMEI is 10
     # Length of IMEI=15 digits, length of IMEISV=16 digits
     BLOCKED_IMEI_LIST = (
-        # Sample IMEI without SVN i.e 15 digits
+        # Sample IMEI without SVN i.e 15 digits used in attach req
+        # and identity response messages
         #{ IMEI="990004823510370"}
-        # Sample IMEI with SVN i.e 16 digits
-        { IMEI="9900048235103723"},
-        { IMEI="3805468432113171"}
+        # Sample IMEISV i.e 16 digits used in security mode
+        # complete message
+        #{ IMEI="9900048235103723"}
     );
 
     NAS :
