Mod magmad.yml to restart stuck Pipelined
Signed-off-by: Nick Yurchenko <koolzz@fb.com>

--- a/lte/gateway/configs/magmad.yml
+++ b/lte/gateway/configs/magmad.yml
@@ -160,3 +160,10 @@ generic_command_config:
     - name: configure_stateless
       command: "magmad_cli.py config_stateless {}"
       allow_params: True
+
+# Services for which magmad grpc status check restart recovery is enabled
+services_to_restart:
+  - pipelined
+
+# How many times can grpc status check fail before restarting the services above
+restart_timeout_threshold: 15
